SMC-118 Copy javaDocs from mainstream

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 # OS X
 .DS_Store
+fuelsdk.properties
+log4j.properties
+settings.xml
 
 # Eclipse
 .classpath
@@ -14,3 +17,4 @@
 # Maven
 target/
 /bin/
+/nbproject/
